--- a/index.scss
+++ b/index.scss
@@ -30,4 +30,10 @@ body {
     border-radius: 3rem;
     color: white;
   }
+
+  #reg-container {
+    #score-form {
+      display: none;
+    }
+  }
 }
