--- a/index.css
+++ b/index.css
@@ -1,13 +1,79 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Courier New", Courier, monospace;
+  background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+}
+body h1 {
+  color: rgb(255, 255, 255);
+  background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  margin: 0 auto;
+  margin-top: 30px;
+  width: 25ch;
+  -webkit-animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
+          animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  border-right: 3px solid;
+  font-family: monospace;
+  font-size: 3rem;
+}
+@-webkit-keyframes typing {
+  from {
+    width: 0;
+  }
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+}
+@-webkit-keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+@keyframes blink {
+  50% {
+    border-color: transparent;
+  }
+}
+body .landing-actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 2rem;
+  gap: 1rem;
+  width: 20rem;
+  height: 30%;
+}
+body #difficulty-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0 auto;
+  margin-top: 2rem;
+  gap: 1rem;
+  width: 20rem;
+}
+body #difficulty-container #select-difficulty {
+  font-size: 1.5rem;
+  margin: 0 auto;
+  color: white;
+  background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
 }
 body button {
+  font-family: inherit;
   border-radius: 3rem;
   border: 0;
   color: white;
   background-color: rgb(62, 198, 153);
   padding: 1rem 2rem;
-  font-size: 1rem;
+  font-size: 2rem;
   cursor: pointer;
 }
 body button:hover {
@@ -29,6 +95,10 @@ body #rules-container {
   margin: 1rem;
   border-radius: 3rem;
   color: white;
+}
+body #game-container {
+  display: flex;
+  justify-content: center;
 }
 body #reg-container #score-form {
   display: none;
