--- a/index.scss
+++ b/index.scss
@@ -1,13 +1,72 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Courier New", Courier, monospace;
+  background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
+
+  h1 {
+    color: rgb(255, 255, 255);
+    background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+    max-width: fit-content;
+    margin: 0 auto;
+    margin-top: 30px;
+    width: 25ch;
+    animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 3px solid;
+    font-family: monospace;
+    font-size: 3rem;
+  }
+
+  @keyframes typing {
+    from {
+      width: 0;
+    }
+  }
+
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
+
+  .landing-actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 2rem;
+    gap: 1rem;
+    width: 20rem;
+    height: 30%;
+  }
+
+  #difficulty-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 2rem;
+    gap: 1rem;
+    width: 20rem;
+
+    #select-difficulty {
+      font-size: 1.5rem;
+      margin: 0 auto;
+      color: white;
+      background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+    }
+  }
 
   button {
+    font-family: inherit;
     border-radius: 3rem;
     border: 0;
     color: white;
     background-color: rgb(62, 198, 153);
     padding: 1rem 2rem;
-    font-size: 1rem;
+    font-size: 2rem;
     cursor: pointer;
 
     &:hover {
@@ -31,6 +90,12 @@ body {
     margin: 1rem;
     border-radius: 3rem;
     color: white;
+  }
+
+  #game-container {
+    display: flex;
+    justify-content: center;
+    // margin: 0 auto;
   }
 
   #reg-container {
