--- a/index.scss
+++ b/index.scss
@@ -103,6 +103,10 @@ body {
     width: 70vw;
     margin: 0 auto;
     // margin: 0 auto;
+
+    button {
+      font-size: 1rem;
+    }
   }
 
   #reg-container {
