--- a/index.css
+++ b/index.css
@@ -5,6 +5,19 @@ body {
   background-repeat: no-repeat;
   color: white;
 }
+body .sound-btn {
+  font-size: 1rem;
+  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
+}
+body .sound-btn:hover {
+  background: linear-gradient(90deg, rgb(81, 32, 166) 0%, rgb(22, 4, 54) 50%, rgb(81, 32, 166) 100%);
+}
+body .sound-btn:focus {
+  background: linear-gradient(90deg, rgb(13, 94, 43) 0%, rgb(58, 183, 60) 50%, rgb(13, 94, 43) 100%);
+}
+body .sound-btn:active {
+  background: linear-gradient(90deg, rgb(13, 94, 43) 0%, rgb(58, 183, 60) 50%, rgb(13, 94, 43) 100%);
+}
 body h1 {
   color: rgb(255, 255, 255);
   background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
@@ -12,7 +25,7 @@ body h1 {
   max-width: -moz-fit-content;
   max-width: fit-content;
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 50px;
   width: 25ch;
   -webkit-animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
           animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
@@ -101,11 +114,22 @@ body #score-container {
   flex-direction: column;
 }
 body #game-container {
-  display: flex;
+  text-align: center;
+  border-radius: 2rem;
+  display: none;
+  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
   justify-content: center;
-  width: 70vw;
+  width: 50vw;
   margin: 0 auto;
+  padding: 2rem;
 }
 body #reg-container #score-form {
   display: none;
+  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
+  text-align: center;
+  border-radius: 2rem;
+  justify-content: center;
+  width: 50vw;
+  margin: 0 auto;
+  padding: 2rem;
 }/*# sourceMappingURL=index.css.map */
