--- a/index.scss
+++ b/index.scss
@@ -5,98 +5,6 @@ body {
   background-repeat: no-repeat;
   color: white;
 
-  .sound-btn {
-    font-size: 1rem;
-    background: linear-gradient(
-      90deg,
-      rgba(147, 108, 217, 1) 0%,
-      rgba(103, 58, 183, 1) 50%,
-      rgba(151, 116, 213, 1) 100%
-    );
-
-    &:hover {
-      background: linear-gradient(
-        90deg,
-        rgb(81, 32, 166) 0%,
-        rgb(22, 4, 54) 50%,
-        rgb(81, 32, 166) 100%
-      );
-    }
-
-    &:focus {
-      background: linear-gradient(
-        90deg,
-        rgb(13, 94, 43) 0%,
-        rgb(58, 183, 60) 50%,
-        rgb(13, 94, 43) 100%
-      );
-    }
-
-    &:active {
-      background: linear-gradient(
-        90deg,
-        rgb(13, 94, 43) 0%,
-        rgb(58, 183, 60) 50%,
-        rgb(13, 94, 43) 100%
-      );
-    }
-  }
-
-  h1 {
-    color: rgb(255, 255, 255);
-    background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
-    max-width: fit-content;
-    margin: 0 auto;
-    margin-top: 50px;
-    width: 25ch;
-    animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
-    white-space: nowrap;
-    overflow: hidden;
-    border-right: 3px solid;
-    font-family: monospace;
-    font-size: 3rem;
-  }
-
-  @keyframes typing {
-    from {
-      width: 0;
-    }
-  }
-
-  @keyframes blink {
-    50% {
-      border-color: transparent;
-    }
-  }
-
-  .landing-actions {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
-    margin-top: 2rem;
-    gap: 1rem;
-    width: 20rem;
-    height: 30%;
-  }
-
-  #difficulty-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: 0 auto;
-    margin-top: 2rem;
-    gap: 1rem;
-    width: 20rem;
-
-    #select-difficulty {
-      font-size: 1.5rem;
-      margin: 0 auto;
-      color: white;
-      background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
-    }
-  }
-
   button {
     font-family: inherit;
     border-radius: 3rem;
@@ -110,62 +18,243 @@ body {
     &:hover {
       background-color: rgb(32, 129, 96);
     }
-  }
 
-  #difficulty-container {
-    #easy-level-btn,
-    #medium-level-btn,
-    #hard-level-btn,
-    #select-difficulty {
-      display: none;
+    @media screen and (max-width: 768px) {
+      padding: 1rem 1rem;
+      font-size: 2rem;
     }
   }
-  #rules-container {
-    display: none;
-    background-color: rgb(62, 198, 153);
-    width: fit-content;
-    padding: 1rem;
-    margin: 1rem;
-    border-radius: 3rem;
-    color: white;
-  }
 
-  #score-container {
-    flex-direction: column;
-  }
-
-  #game-container {
-    text-align: center;
-    border-radius: 2rem;
-    display: none;
-    background: linear-gradient(
-      90deg,
-      rgba(147, 108, 217, 1) 0%,
-      rgba(103, 58, 183, 1) 50%,
-      rgba(151, 116, 213, 1) 100%
-    );
-
-    justify-content: center;
-    width: 50vw;
-    margin: 0 auto;
-    padding: 2rem;
-  }
-
-  #reg-container {
-    #score-form {
-      display: none;
+  header {
+    .sound-btn {
+      font-size: 1rem;
       background: linear-gradient(
         90deg,
         rgba(147, 108, 217, 1) 0%,
         rgba(103, 58, 183, 1) 50%,
         rgba(151, 116, 213, 1) 100%
       );
+
+      &:hover {
+        background: linear-gradient(
+          90deg,
+          rgb(81, 32, 166) 0%,
+          rgb(22, 4, 54) 50%,
+          rgb(81, 32, 166) 100%
+        );
+      }
+
+      &:focus {
+        background: linear-gradient(
+          90deg,
+          rgb(13, 94, 43) 0%,
+          rgb(58, 183, 60) 50%,
+          rgb(13, 94, 43) 100%
+        );
+      }
+
+      &:active {
+        background: linear-gradient(
+          90deg,
+          rgb(13, 94, 43) 0%,
+          rgb(58, 183, 60) 50%,
+          rgb(13, 94, 43) 100%
+        );
+      }
+    }
+
+    #home-btn,
+    #back-btn {
+      font-size: 1rem;
+      margin-right: 0.5rem;
+      float: right;
+    }
+
+    h1 {
+      color: rgb(255, 255, 255);
+      background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+      max-width: fit-content;
+      margin: 0 auto;
+      margin-top: 50px;
+      width: 25ch;
+      animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
+      white-space: nowrap;
+      overflow: hidden;
+      border-right: 3px solid;
+      font-family: monospace;
+      font-size: 3rem;
+
+      @media screen and (max-width: 768px) {
+        font-size: 1.5rem;
+      }
+    }
+
+    @keyframes typing {
+      from {
+        width: 0;
+      }
+    }
+
+    @keyframes blink {
+      50% {
+        border-color: transparent;
+      }
+    }
+  }
+
+  main {
+    .landing-actions {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
+      margin-top: 4rem;
+      gap: 1rem;
+      width: 20rem;
+      height: 30%;
+
+      #rules-btn,
+      #new-game-btn,
+      #score-btn,
+      #easy-score-btn,
+      #medium-score-btn,
+      #hard-score-btn {
+        display: none;
+      }
+    }
+
+    #difficulty-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0 auto;
+      margin-top: 2rem;
+      gap: 1rem;
+      width: 20rem;
+
+      #easy-level-btn,
+      #medium-level-btn,
+      #hard-level-btn,
+      #select-difficulty {
+        display: none;
+      }
+
+      #select-difficulty {
+        font-size: 1.5rem;
+        margin: 0 auto;
+        color: white;
+        background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+      }
+    }
+
+    #rules-container {
+      display: none;
+      flex-direction: column;
+      // text-align: center;
+      border-radius: 2rem;
+      // display: flex;
+      background: linear-gradient(
+        90deg,
+        rgba(147, 108, 217, 1) 0%,
+        rgba(103, 58, 183, 1) 50%,
+        rgba(151, 116, 213, 1) 100%
+      );
+      justify-content: center;
+      width: fit-content;
+      margin: 0 auto;
+      padding: 1rem;
+    }
+
+    #score-container {
+      // display: none;
+      flex-direction: column;
+      // text-align: center;
+      gap: 1rem;
+      border-radius: 2rem;
+      display: flex;
+      background: linear-gradient(
+        90deg,
+        rgba(147, 108, 217, 1) 0%,
+        rgba(103, 58, 183, 1) 50%,
+        rgba(151, 116, 213, 1) 100%
+      );
+      justify-content: center;
+      width: fit-content;
+      margin: 0 auto;
+      // padding: 1rem;
+    }
+
+    #game-container {
       text-align: center;
       border-radius: 2rem;
+      display: flex;
+      background: linear-gradient(
+        90deg,
+        rgba(147, 108, 217, 1) 0%,
+        rgba(103, 58, 183, 1) 50%,
+        rgba(151, 116, 213, 1) 100%
+      );
+
       justify-content: center;
-      width: 50vw;
+      width: 70vw;
       margin: 0 auto;
-      padding: 2rem;
+      // padding: 2rem;
+    }
+
+    #reg-container {
+      text-align: center;
+
+      #user-score-info {
+        // padding: 1rem;
+        font-size: 1.5rem;
+        margin-left: 1rem;
+        margin: 0 auto;
+        width: fit-content;
+        background: linear-gradient(
+          90deg,
+          rgb(13, 94, 43) 0%,
+          rgb(58, 183, 60) 50%,
+          rgb(13, 94, 43) 100%
+        );
+      }
+      #score-form {
+        display: none;
+        background: linear-gradient(
+          90deg,
+          rgba(147, 108, 217, 1) 0%,
+          rgba(103, 58, 183, 1) 50%,
+          rgba(151, 116, 213, 1) 100%
+        );
+        text-align: center;
+        border-radius: 2rem;
+        justify-content: center;
+        align-items: center;
+        width: 50vw;
+        margin: 0 auto;
+        padding: 2rem;
+        margin-top: 1rem;
+
+        button {
+          padding: 1rem;
+          font-size: 1rem;
+          margin-left: 1rem;
+          background: linear-gradient(
+            90deg,
+            rgb(13, 94, 43) 0%,
+            rgb(58, 183, 60) 50%,
+            rgb(13, 94, 43) 100%
+          );
+
+          &:hover {
+            background: linear-gradient(
+              90deg,
+              rgb(13, 94, 43) 0%,
+              rgb(2, 64, 3) 50%,
+              rgb(13, 94, 43) 100%
+            );
+          }
+        }
+      }
     }
   }
 }
