--- a/index.css
+++ b/index.css
@@ -20,7 +20,7 @@ body button:hover {
 }
 @media screen and (max-width: 768px) {
   body button {
-    padding: 1rem 1rem;
+    padding: 0.5rem 0.5rem;
     font-size: 2rem;
   }
 }
@@ -42,6 +42,9 @@ body header #back-btn {
   font-size: 1rem;
   margin-right: 0.5rem;
   float: right;
+}
+body header #back-btn {
+  display: none;
 }
 body header h1 {
   color: rgb(255, 255, 255);
@@ -108,7 +111,6 @@ body main #difficulty-container {
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
-  margin-top: 2rem;
   gap: 1rem;
   width: 20rem;
 }
@@ -134,6 +136,7 @@ body main #rules-container {
   width: -moz-fit-content;
   width: fit-content;
   margin: 0 auto;
+  margin-top: 1rem;
   padding: 1rem;
 }
 body main #score-container {
@@ -156,6 +159,17 @@ body main #game-container {
   justify-content: center;
   width: 70vw;
   margin: 0 auto;
+}
+body main #game-container .button-styles {
+  background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+  margin-top: 20px;
+  margin-right: 15px;
+  font-size: 1rem;
+}
+@media screen and (max-width: 768px) {
+  body main #game-container {
+    font-size: 0.7rem;
+  }
 }
 body main #reg-container {
   text-align: center;
