--- a/index.css
+++ b/index.css
@@ -1,7 +1,25 @@
+:root {
+  --white: #ffffff;
+  --green-1: rgb(62, 198, 153);
+  --green-2: rgb(13, 94, 43);
+  --green-3: rgb(58, 183, 60);
+  --green-4: rgb(28, 143, 127);
+  --green-5: rgb(2, 64, 3);
+  --purple-1: rgba(147, 108, 217, 1);
+  --purple-2: rgba(103, 58, 183, 1);
+  --purple-3: rgba(151, 116, 213, 1);
+  --dark-purple-1: rgb(81, 32, 166);
+  --dark-purple-2: rgb(22, 4, 54);
+  --dark-purple-3: rgb(81, 32, 166);
+  --dark-purple-4: rgb(48, 33, 108);
+}
+
 body {
   font-family: "Courier New", Courier, monospace;
   background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
   background-size: 100vw 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
   background-repeat: no-repeat;
   color: white;
 }
@@ -10,13 +28,13 @@ body button {
   border-radius: 3rem;
   border: 0;
   color: white;
-  background-color: rgb(62, 198, 153);
+  background-color: var(--green-1);
   padding: 1rem 2rem;
   font-size: 2rem;
   cursor: pointer;
 }
 body button:hover {
-  background-color: rgb(32, 129, 96);
+  background-color: var(--green-4);
 }
 @media screen and (max-width: 768px) {
   body button {
@@ -26,16 +44,16 @@ body button:hover {
 }
 body header .sound-btn {
   font-size: 1rem;
-  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
+  background: linear-gradient(90deg, var(--purple-1) 0%, var(--purple-2) 50%, var(--purple-3) 100%);
 }
 body header .sound-btn:hover {
-  background: linear-gradient(90deg, rgb(81, 32, 166) 0%, rgb(22, 4, 54) 50%, rgb(81, 32, 166) 100%);
+  background: linear-gradient(90deg, var(--dark-purple-1) 0%, var(--dark-purple-2) 50%, var(--dark-purple-3) 100%);
 }
 body header .sound-btn:focus {
-  background: linear-gradient(90deg, rgb(13, 94, 43) 0%, rgb(58, 183, 60) 50%, rgb(13, 94, 43) 100%);
+  background: linear-gradient(90deg, var(--green-2) 0%, var(--green-3) 50%, var(--green-2) 100%);
 }
 body header .sound-btn:active {
-  background: linear-gradient(90deg, rgb(13, 94, 43) 0%, rgb(58, 183, 60) 50%, rgb(13, 94, 43) 100%);
+  background: linear-gradient(90deg, var(--green-2) 0%, var(--green-3) 50%, var(--green-2) 100%);
 }
 body header #home-btn,
 body header #back-btn {
@@ -48,7 +66,7 @@ body header #back-btn {
 }
 body header h1 {
   color: rgb(255, 255, 255);
-  background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+  background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
   max-width: fit-content;
@@ -124,13 +142,13 @@ body main #difficulty-container #select-difficulty {
   font-size: 1.5rem;
   margin: 0 auto;
   color: white;
-  background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+  background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
 }
 body main #rules-container {
   display: none;
   flex-direction: column;
   border-radius: 2rem;
-  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
+  background: linear-gradient(90deg, var(--purple-1) 0%, var(--purple-2) 50%, var(--purple-3) 100%);
   justify-content: center;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -144,7 +162,7 @@ body main #score-container {
   gap: 1rem;
   border-radius: 2rem;
   display: flex;
-  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
+  background: linear-gradient(90deg, var(--purple-1) 0%, var(--purple-2) 50%, var(--purple-3) 100%);
   justify-content: center;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -155,13 +173,13 @@ body main #game-container {
   text-align: center;
   border-radius: 2rem;
   display: flex;
-  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
+  background: linear-gradient(90deg, var(--purple-1) 0%, var(--purple-2) 50%, var(--purple-3) 100%);
   justify-content: center;
   width: 70vw;
   margin: 0 auto;
 }
 body main #game-container .button-styles {
-  background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+  background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
   margin-top: 20px;
   margin-right: 15px;
   font-size: 1rem;
@@ -181,11 +199,11 @@ body main #reg-container #user-score-info {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  background: linear-gradient(90deg, rgb(13, 94, 43) 0%, rgb(58, 183, 60) 50%, rgb(13, 94, 43) 100%);
+  background: linear-gradient(90deg, var(--green-2) 0%, var(--green-3) 50%, var(--green-2) 100%);
 }
 body main #reg-container #score-form {
   display: none;
-  background: linear-gradient(90deg, rgb(147, 108, 217) 0%, rgb(103, 58, 183) 50%, rgb(151, 116, 213) 100%);
+  background: linear-gradient(90deg, var(--purple-1) 0%, var(--purple-2) 50%, var(--purple-3) 100%);
   text-align: center;
   border-radius: 2rem;
   justify-content: center;
@@ -199,8 +217,8 @@ body main #reg-container #score-form button {
   padding: 1rem;
   font-size: 1rem;
   margin-left: 1rem;
-  background: linear-gradient(90deg, rgb(13, 94, 43) 0%, rgb(58, 183, 60) 50%, rgb(13, 94, 43) 100%);
+  background: linear-gradient(90deg, var(--green-2) 0%, var(--green-3) 50%, var(--green-2) 100%);
 }
 body main #reg-container #score-form button:hover {
-  background: linear-gradient(90deg, rgb(13, 94, 43) 0%, rgb(2, 64, 3) 50%, rgb(13, 94, 43) 100%);
+  background: linear-gradient(90deg, var(--green-2) 0%, var(--green-5) 50%, var(--green-2) 100%);
 }/*# sourceMappingURL=index.css.map */
