--- a/index.scss
+++ b/index.scss
@@ -1,7 +1,24 @@
+:root {
+  --white: #ffffff;
+  --green-1: rgb(62, 198, 153);
+  --green-2: rgb(13, 94, 43);
+  --green-3: rgb(58, 183, 60);
+  --green-4: rgb(28, 143, 127);
+  --green-5: rgb(2, 64, 3);
+  --purple-1: rgba(147, 108, 217, 1);
+  --purple-2: rgba(103, 58, 183, 1);
+  --purple-3: rgba(151, 116, 213, 1);
+  --dark-purple-1: rgb(81, 32, 166);
+  --dark-purple-2: rgb(22, 4, 54);
+  --dark-purple-3: rgb(81, 32, 166);
+  --dark-purple-4: rgb(48, 33, 108);
+}
+
 body {
   font-family: "Courier New", Courier, monospace;
   background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
   background-size: 100vw 100vh;
+  object-fit: cover;
   background-repeat: no-repeat;
   color: white;
 
@@ -10,13 +27,13 @@ body {
     border-radius: 3rem;
     border: 0;
     color: white;
-    background-color: rgb(62, 198, 153);
+    background-color: var(--green-1);
     padding: 1rem 2rem;
     font-size: 2rem;
     cursor: pointer;
 
     &:hover {
-      background-color: rgb(32, 129, 96);
+      background-color: var(--green-4);
     }
 
     @media screen and (max-width: 768px) {
@@ -30,35 +47,35 @@ body {
       font-size: 1rem;
       background: linear-gradient(
         90deg,
-        rgba(147, 108, 217, 1) 0%,
-        rgba(103, 58, 183, 1) 50%,
-        rgba(151, 116, 213, 1) 100%
+        var(--purple-1) 0%,
+        var(--purple-2) 50%,
+        var(--purple-3) 100%
       );
 
       &:hover {
         background: linear-gradient(
           90deg,
-          rgb(81, 32, 166) 0%,
-          rgb(22, 4, 54) 50%,
-          rgb(81, 32, 166) 100%
+          var(--dark-purple-1) 0%,
+          var(--dark-purple-2) 50%,
+          var(--dark-purple-3) 100%
         );
       }
 
       &:focus {
         background: linear-gradient(
           90deg,
-          rgb(13, 94, 43) 0%,
-          rgb(58, 183, 60) 50%,
-          rgb(13, 94, 43) 100%
+          var(--green-2) 0%,
+          var(--green-3) 50%,
+          var(--green-2) 100%
         );
       }
 
       &:active {
         background: linear-gradient(
           90deg,
-          rgb(13, 94, 43) 0%,
-          rgb(58, 183, 60) 50%,
-          rgb(13, 94, 43) 100%
+          var(--green-2) 0%,
+          var(--green-3) 50%,
+          var(--green-2) 100%
         );
       }
     }
@@ -76,7 +93,7 @@ body {
 
     h1 {
       color: rgb(255, 255, 255);
-      background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+      background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
       max-width: fit-content;
       margin: 0 auto;
       margin-top: 50px;
@@ -132,7 +149,6 @@ body {
       flex-direction: column;
       justify-content: center;
       margin: 0 auto;
-      // margin-top: 2rem;
       gap: 1rem;
       width: 20rem;
 
@@ -147,7 +163,7 @@ body {
         font-size: 1.5rem;
         margin: 0 auto;
         color: white;
-        background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+        background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
       }
     }
 
@@ -157,9 +173,9 @@ body {
       border-radius: 2rem;
       background: linear-gradient(
         90deg,
-        rgba(147, 108, 217, 1) 0%,
-        rgba(103, 58, 183, 1) 50%,
-        rgba(151, 116, 213, 1) 100%
+        var(--purple-1) 0%,
+        var(--purple-2) 50%,
+        var(--purple-3) 100%
       );
       justify-content: center;
       width: fit-content;
@@ -169,22 +185,19 @@ body {
     }
 
     #score-container {
-      // display: none;
       flex-direction: column;
-      // text-align: center;
       gap: 1rem;
       border-radius: 2rem;
       display: flex;
       background: linear-gradient(
         90deg,
-        rgba(147, 108, 217, 1) 0%,
-        rgba(103, 58, 183, 1) 50%,
-        rgba(151, 116, 213, 1) 100%
+        var(--purple-1) 0%,
+        var(--purple-2) 50%,
+        var(--purple-3) 100%
       );
       justify-content: center;
       width: fit-content;
       margin: 0 auto;
-      // padding: 1rem;
     }
 
     #game-container {
@@ -193,16 +206,16 @@ body {
       display: flex;
       background: linear-gradient(
         90deg,
-        rgba(147, 108, 217, 1) 0%,
-        rgba(103, 58, 183, 1) 50%,
-        rgba(151, 116, 213, 1) 100%
+        var(--purple-1) 0%,
+        var(--purple-2) 50%,
+        var(--purple-3) 100%
       );
       justify-content: center;
       width: 70vw;
       margin: 0 auto;
 
       .button-styles {
-        background-image: linear-gradient(rgb(28, 143, 127), rgb(48, 33, 108));
+        background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
         margin-top: 20px;
         margin-right: 15px;
         font-size: 1rem;
@@ -217,25 +230,25 @@ body {
       text-align: center;
 
       #user-score-info {
-        // padding: 1rem;
         font-size: 1.5rem;
         margin-left: 1rem;
         margin: 0 auto;
         width: fit-content;
         background: linear-gradient(
           90deg,
-          rgb(13, 94, 43) 0%,
-          rgb(58, 183, 60) 50%,
-          rgb(13, 94, 43) 100%
+          var(--green-2) 0%,
+          var(--green-3) 50%,
+          var(--green-2) 100%
         );
       }
+
       #score-form {
         display: none;
         background: linear-gradient(
           90deg,
-          rgba(147, 108, 217, 1) 0%,
-          rgba(103, 58, 183, 1) 50%,
-          rgba(151, 116, 213, 1) 100%
+          var(--purple-1) 0%,
+          var(--purple-2) 50%,
+          var(--purple-3) 100%
         );
         text-align: center;
         border-radius: 2rem;
@@ -252,17 +265,17 @@ body {
           margin-left: 1rem;
           background: linear-gradient(
             90deg,
-            rgb(13, 94, 43) 0%,
-            rgb(58, 183, 60) 50%,
-            rgb(13, 94, 43) 100%
+            var(--green-2) 0%,
+            var(--green-3) 50%,
+            var(--green-2) 100%
           );
 
           &:hover {
             background: linear-gradient(
               90deg,
-              rgb(13, 94, 43) 0%,
-              rgb(2, 64, 3) 50%,
-              rgb(13, 94, 43) 100%
+              var(--green-2) 0%,
+              var(--green-5) 50%,
+              var(--green-2) 100%
             );
           }
         }
