--- a/index.css
+++ b/index.css
@@ -18,16 +18,14 @@ body {
   font-family: "Courier New", Courier, monospace;
   background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
   background-size: 100vw 100vh;
-  -o-object-fit: cover;
-     object-fit: cover;
   background-repeat: no-repeat;
-  color: white;
+  color: var(--white);
 }
 body button {
   font-family: inherit;
   border-radius: 3rem;
   border: 0;
-  color: white;
+  color: var(--white);
   background-color: var(--green-1);
   padding: 1rem 2rem;
   font-size: 2rem;
@@ -65,7 +63,7 @@ body header #back-btn {
   display: none;
 }
 body header h1 {
-  color: rgb(255, 255, 255);
+  color: var(--white);
   background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
   max-width: -webkit-fit-content;
   max-width: -moz-fit-content;
@@ -141,7 +139,7 @@ body main #difficulty-container #select-difficulty {
 body main #difficulty-container #select-difficulty {
   font-size: 1.5rem;
   margin: 0 auto;
-  color: white;
+  color: var(--white);
   background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
 }
 body main #rules-container {
