--- a/index.scss
+++ b/index.scss
@@ -18,15 +18,14 @@ body {
   font-family: "Courier New", Courier, monospace;
   background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
   background-size: 100vw 100vh;
-  object-fit: cover;
   background-repeat: no-repeat;
-  color: white;
+  color: var(--white);
 
   button {
     font-family: inherit;
     border-radius: 3rem;
     border: 0;
-    color: white;
+    color: var(--white);
     background-color: var(--green-1);
     padding: 1rem 2rem;
     font-size: 2rem;
@@ -92,7 +91,7 @@ body {
     }
 
     h1 {
-      color: rgb(255, 255, 255);
+      color: var(--white);
       background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
       max-width: fit-content;
       margin: 0 auto;
@@ -162,7 +161,7 @@ body {
       #select-difficulty {
         font-size: 1.5rem;
         margin: 0 auto;
-        color: white;
+        color: var(--white);
         background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
       }
     }
