--- a/index.css
+++ b/index.css
@@ -69,13 +69,13 @@ body header h1 {
   max-width: -moz-fit-content;
   max-width: fit-content;
   margin: 0 auto;
-  margin-top: 50px;
+  margin-top: 3.2rem;
   width: 25ch;
   -webkit-animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
           animation: typing 2s steps(22), blink 0.5s step-end infinite alternate;
   white-space: nowrap;
   overflow: hidden;
-  border-right: 3px solid;
+  border-right: 0.2rem solid;
   font-family: monospace;
   font-size: 3rem;
 }
@@ -109,7 +109,7 @@ body main .landing-actions {
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
-  margin-top: 4rem;
+  margin-top: 7rem;
   gap: 1rem;
   width: 20rem;
   height: 30%;
@@ -155,6 +155,11 @@ body main #rules-container {
   margin-top: 1rem;
   padding: 1rem;
 }
+@media screen and (max-width: 768px) {
+  body main #rules-container {
+    margin: 2rem 2rem 0rem 2rem;
+  }
+}
 body main #score-container {
   flex-direction: column;
   gap: 1rem;
@@ -178,13 +183,20 @@ body main #game-container {
 }
 body main #game-container .button-styles {
   background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
-  margin-top: 20px;
-  margin-right: 15px;
+  margin-top: 0.5rem;
+  margin-right: 0.7rem;
   font-size: 1rem;
 }
 @media screen and (max-width: 768px) {
   body main #game-container {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
+    margin-top: -4rem;
+  }
+  body main #game-container p {
+    margin: 0;
+  }
+  body main #game-container h2 {
+    margin-top: 1rem;
   }
 }
 body main #reg-container {
@@ -198,6 +210,11 @@ body main #reg-container #user-score-info {
   width: -moz-fit-content;
   width: fit-content;
   background: linear-gradient(90deg, var(--green-2) 0%, var(--green-3) 50%, var(--green-2) 100%);
+}
+@media screen and (max-width: 768px) {
+  body main #reg-container #user-score-info {
+    margin: 0 2rem 0 2rem;
+  }
 }
 body main #reg-container #score-form {
   display: none;
