--- a/index.scss
+++ b/index.scss
@@ -201,6 +201,7 @@ body {
       justify-content: center;
       width: fit-content;
       margin: 0 auto;
+      margin-top: -1rem;
     }
 
     #game-container {
