--- a/index.scss
+++ b/index.scss
@@ -105,7 +105,7 @@ body {
       font-size: 3rem;
 
       @media screen and (max-width: 768px) {
-        font-size: 1.5rem;
+        font-size: 1.7rem;
       }
     }
 
@@ -202,6 +202,10 @@ body {
       width: fit-content;
       margin: 0 auto;
       margin-top: -1rem;
+
+      @media screen and (max-width: 768px) {
+        margin-top: -2rem;
+      }
     }
 
     #game-container {
@@ -223,6 +227,14 @@ body {
         margin-top: 0.5rem;
         margin-right: 0.7rem;
         font-size: 1rem;
+      }
+
+      .text-styles {
+        font-size: 1rem;
+        background-color: green;
+        width: fit-content;
+        margin: 0 auto;
+        padding: 0.5rem;
       }
 
       @media screen and (max-width: 768px) {
