--- a/index.scss
+++ b/index.scss
@@ -17,8 +17,8 @@
 body {
   font-family: "Courier New", Courier, monospace;
   background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
-  background-size: 100vw 100vh;
-  background-repeat: no-repeat;
+  // background-size: 100vw 100vh;
+  // background-repeat: no-repeat;
   color: var(--white);
 
   button {
