--- a/index.css
+++ b/index.css
@@ -17,6 +17,8 @@
 body {
   font-family: "Courier New", Courier, monospace;
   background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
   color: var(--white);
 }
 body button {
@@ -36,6 +38,12 @@ body button:hover {
   body button {
     padding: 0.5rem 0.5rem;
     font-size: 2rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  body button {
+    padding: 0.6rem;
+    font-size: 1rem;
   }
 }
 body header .sound-btn {
@@ -82,6 +90,11 @@ body header h1 {
     font-size: 1.7rem;
   }
 }
+@media screen and (max-width: 480px) {
+  body header h1 {
+    font-size: 1rem;
+  }
+}
 @-webkit-keyframes typing {
   from {
     width: 0;
@@ -112,6 +125,12 @@ body main .landing-actions {
   width: 20rem;
   height: 30%;
 }
+@media screen and (max-width: 480px) {
+  body main .landing-actions #start-btn {
+    width: 15rem;
+    margin: 0 auto;
+  }
+}
 body main .landing-actions #rules-btn,
 body main .landing-actions #new-game-btn,
 body main .landing-actions #score-btn,
@@ -119,6 +138,17 @@ body main .landing-actions #easy-score-btn,
 body main .landing-actions #medium-score-btn,
 body main .landing-actions #hard-score-btn {
   display: none;
+}
+@media screen and (max-width: 480px) {
+  body main .landing-actions #rules-btn,
+body main .landing-actions #new-game-btn,
+body main .landing-actions #score-btn,
+body main .landing-actions #easy-score-btn,
+body main .landing-actions #medium-score-btn,
+body main .landing-actions #hard-score-btn {
+    width: 15rem;
+    margin: 0 auto;
+  }
 }
 body main #difficulty-container {
   display: flex;
@@ -158,6 +188,11 @@ body main #rules-container {
     margin: 2rem 2rem 0rem 2rem;
   }
 }
+@media screen and (max-width: 768px) {
+  body main #rules-container {
+    margin: 1rem 2rem 0rem 2rem;
+  }
+}
 body main #score-container {
   flex-direction: column;
   gap: 1rem;
@@ -174,6 +209,11 @@ body main #score-container {
 @media screen and (max-width: 768px) {
   body main #score-container {
     margin-top: -2rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  body main #score-container {
+    width: 80vw;
   }
 }
 body main #game-container {
@@ -212,6 +252,15 @@ body main #game-container .text-styles {
     margin-top: 1rem;
   }
 }
+@media screen and (max-width: 480px) {
+  body main #game-container {
+    font-size: 0.6rem;
+    margin-top: -4rem;
+  }
+  body main #game-container h2 {
+    margin-top: 0.7rem;
+  }
+}
 body main #reg-container {
   text-align: center;
 }
@@ -240,6 +289,11 @@ body main #reg-container #score-form {
   margin: 0 auto;
   padding: 2rem;
   margin-top: 1rem;
+}
+@media screen and (max-width: 480px) {
+  body main #reg-container #score-form {
+    width: 70vw;
+  }
 }
 body main #reg-container #score-form button {
   padding: 1rem;
