--- a/index.scss
+++ b/index.scss
@@ -17,8 +17,8 @@
 body {
   font-family: "Courier New", Courier, monospace;
   background-image: url("https://images.unsplash.com/photo-1656170120688-2a23fe65c586?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1296&q=80");
-  // background-size: 100vw 100vh;
-  // background-repeat: no-repeat;
+  background-size: 100vw 100vh;
+  background-repeat: no-repeat;
   color: var(--white);
 
   button {
@@ -38,6 +38,11 @@ body {
     @media screen and (max-width: 768px) {
       padding: 0.5rem 0.5rem;
       font-size: 2rem;
+    }
+
+    @media screen and (max-width: 480px) {
+      padding: 0.6rem;
+      font-size: 1rem;
     }
   }
 
@@ -107,6 +112,10 @@ body {
       @media screen and (max-width: 768px) {
         font-size: 1.7rem;
       }
+
+      @media screen and (max-width: 480px) {
+        font-size: 1rem;
+      }
     }
 
     @keyframes typing {
@@ -133,6 +142,13 @@ body {
       width: 20rem;
       height: 30%;
 
+      #start-btn {
+        @media screen and (max-width: 480px) {
+          width: 15rem;
+          margin: 0 auto;
+        }
+      }
+
       #rules-btn,
       #new-game-btn,
       #score-btn,
@@ -140,6 +156,11 @@ body {
       #medium-score-btn,
       #hard-score-btn {
         display: none;
+
+        @media screen and (max-width: 480px) {
+          width: 15rem;
+          margin: 0 auto;
+        }
       }
     }
 
@@ -185,6 +206,10 @@ body {
       @media screen and (max-width: 768px) {
         margin: 2rem 2rem 0rem 2rem;
       }
+
+      @media screen and (max-width: 768px) {
+        margin: 1rem 2rem 0rem 2rem;
+      }
     }
 
     #score-container {
@@ -205,6 +230,10 @@ body {
 
       @media screen and (max-width: 768px) {
         margin-top: -2rem;
+      }
+
+      @media screen and (max-width: 768px) {
+        width: 80vw;
       }
     }
 
@@ -249,6 +278,15 @@ body {
           margin-top: 1rem;
         }
       }
+
+      @media screen and (max-width: 480px) {
+        font-size: 0.6rem;
+        margin-top: -4rem;
+
+        h2 {
+          margin-top: 0.7rem;
+        }
+      }
     }
 
     #reg-container {
@@ -287,6 +325,10 @@ body {
         margin: 0 auto;
         padding: 2rem;
         margin-top: 1rem;
+
+        @media screen and (max-width: 480px) {
+          width: 70vw;
+        }
 
         button {
           padding: 1rem;
