--- a/index.css
+++ b/index.css
@@ -235,12 +235,14 @@ body main #game-container {
   justify-content: center;
   width: 70vw;
   margin: 0 auto;
+  margin-top: -4rem;
 }
 body main #game-container .button-styles {
   background-image: linear-gradient(var(--green-4), var(--dark-purple-4));
   margin-top: 0.5rem;
   margin-right: 0.7rem;
   font-size: 1rem;
+  padding: 0.7rem;
 }
 body main #game-container .text-styles {
   font-size: 1rem;
@@ -250,11 +252,6 @@ body main #game-container .text-styles {
   width: fit-content;
   margin: 0 auto;
   padding: 0.5rem;
-}
-@media screen and (max-width: 1024px) {
-  body main #game-container button {
-    padding: 0.4rem;
-  }
 }
 @media screen and (max-width: 768px) {
   body main #game-container {
